--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 
 
-	<link rel="stylesheet" href="/storage/emulated/0/googlifaqt/css/design.css">
+	<link rel="stylesheet" href="design.css">
 
 
 
 
-	<link rel="stylesheet" href="/storage/emulated/0/googlifaqt/css/responsive.css">
+	<link rel="stylesheet" href="responsive.css">
 
 
 
